dashboard is now placing stuff below each other in the print versions. Needs major checks for correct whitespace usage.

--- a/modules/shared/shared.scss
+++ b/modules/shared/shared.scss
@@ -29,7 +29,5 @@
 @import "components/panel/panel";
 
 //@media ("print") {
-.is-print-mode {
-  @import "styles/base/reset-print";
-}
+@import "styles/base/reset-print";
 //}
