--- a/modules/shared/styles/base/_reset-print.scss
+++ b/modules/shared/styles/base/_reset-print.scss
@@ -1,5 +1,10 @@
 html,
 body {
   height: auto;
-  background-color: $primary-contrast;
+}
+
+body {
+  width: 800px;
+  margin-right: auto;
+  margin-left: auto;
 }
